# google-group-oidc

./: .gitignore  Cargo.toml  README.md  justfile  wrangler.toml
dev-setup/: flake.nix
src/: consts.rs  google.rs  groups.rs  handler_error.rs  lib.rs  oidc_token.rs  scope.rs  state.rs
src/endpoints/: callback.rs  jwks.rs  mod.rs
src/endpoints/authorize/: authorize_endpoint.rs  authorize_error.rs  mod.rs
src/endpoints/token/: mod.rs  token_endpoint.rs  token_error.rs
src/endpoints/well_known/: mod.rs  openid_configuration.rs
